# rustParser

./: Cargo.toml  Makefile  README.md  docs.md  flake.nix
src/: grammar.pest  lib.rs  main.rs
tests/: test.rs
tests/iCals/: 1.ical  2.ical
