[package]
name = "iCalendar_parser"
version = "0.1.9"
edition = "2021"
description = "iCalendar (.ical) file parsing and putting into handy structure"
repository = "https://github.com/trokhymchuk/rustParser"
readme = "README.md"
exclude = [
    "flake.nix",
    "flake.lock",
]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = "4.5.20"
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
